# drought-briefing-v2

./: .dockerignore  .gitignore  ARCHITECTURE.md  CLAUDE.md  Dockerfile  LICENSE  MIGRATION_PLAN.md  Makefile  PRD.md  README.md  app.py  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: daily-update.yml  deploy.yml
config/: rules.yaml  rules_loader.py  settings.py  sources.yaml
config/schemas/: canton.json  region.json
data/: kantone_warnregionen.json  station_region_mapping.json  warnkarte_fixture.json
data/ruleset/: README.md  canton-bulletin.yaml  example-region-34.html  example-report.yaml
docs/: index.html
docs/superpowers/plans/: 2026-05-28-docker-compose-dev-stack.md  2026-05-28-drought-briefing.md  (+4 more)
scripts/: aggregate.py  download.py  generate_site.py  refresh_warnkarte_fixture.py  validate.py
src/: models.py
src/aggregation/: canton.py  indicators.py  regional.py  stations.py
src/briefing/: renderer.py  schemas.py  template.py  text_blocks.py  text_blocks_de.py  text_blocks_fr.py
src/data/: fixture_loader.py  stac_client.py  vhi_client.py  warnkarte_client.py
src/export/: report.py
src/i18n/: strings.py
src/quality/: checks.py
src/viz/: charts.py  maps.py
tests/: test_aggregate_script.py  test_aggregation.py  test_briefing_fr.py  test_canton.py  test_export.py  test_fixture_loader.py  test_i18n.py  test_models.py  test_pipeline.py  test_renderer.py  test_rules.py  test_schema.py  test_settings_cantons.py  test_site_generation.py  test_stations.py  test_vhi_client.py  test_warnkarte_client.py
(+6 files in other folders)
